// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionSelectionPane calls \`cancelOptionSelection\` when cancelled 1`] = `
Array [
  "id",
]
`;

exports[`OptionSelectionPane calls \`selectOption\` when selected 1`] = `
Array [
  "id",
  "option_selection_pane",
  "selected",
]
`;

exports[`OptionSelectionPane renders correctly 1`] = `
<div
  data-__type="list"
  data-icon="icon"
  data-iconUrl="iconUrl"
  data-items="items"
  data-onCancel={[Function]}
  data-onSelect={[Function]}
/>
`;
